--- a/inst/doc/CSARVignette.bib
+++ b/inst/doc/CSARVignette.bib
@@ -28,7 +28,7 @@
 	followed by sequencing (ChIP-SEQ) or hybridization to whole genome
 	arrays (ChIP-CHIP)},
   journal = {Nature Protocols},
-  year = {(accepted)},
+  year = {(2010)},
   owner = {muino001},
   timestamp = {2009.11.22}
 }
@@ -38,7 +38,7 @@
 	Gerco C AND Krajewski, P},
   title = {Plant ChIP-seq Analyzer: An R package for the statistical detection
 	of protein-bound genomic regions},
-  year = {(submitted)},
+  year = {(2011)},
   owner = {muino001},
   timestamp = {2009.11.22}
 }
