I eliminate non UTF characters from bibliography

--- a/vignettes/CSARVignette.bib
+++ b/vignettes/CSARVignette.bib
@@ -22,7 +22,7 @@
 }
 
 @ARTICLE{KaufmannAccepted,
-  author = {Kaufmann, Kerstin AND Muino, Jose M AND Østerås, Magne AND Farinelli,
+  author = {Kaufmann, Kerstin AND Muino, Jose M AND Osteras, Magne AND Farinelli,
 	Laurent AND Krajewski,  Pawel AND Angenent, Gerco C},
   title = {Chromatin immunoprecipitation (ChIP) of plant transcription factors
 	followed by sequencing (ChIP-SEQ) or hybridization to whole genome
